# zkProver

./: .gitignore  Cargo.toml  README.md  install.sh  rust-toolchain.toml  rustfmt.toml
bridge/: Cargo.toml
bridge/src/: lib.rs
bridge/src/trie/: mpt.rs
chains/evm/: .gitignore  Cargo.toml  build.rs
chains/evm/contracts/: BalanceChecker.sol  Setup.sol
chains/evm/contracts/forge-std/: Base.sol  Test.sol  Vm.sol
chains/evm/src/: abi.rs  balance.rs  compiler.rs  constants.rs  db.rs  deal.rs  decode.rs  error.rs  evm_primitives.rs  input_builder.rs  inspectors.rs  lib.rs  mpt.rs  opts.rs  poc_compiler.rs  proof.rs  provider.rs  runner.rs  setup.rs  sim.rs  utils.rs
chains/evm/src/fork/: backend.rs  cache.rs  database.rs  init.rs  mod.rs
chains/evm_core/: Cargo.toml  build.rs
chains/evm_core/contracts/: Deal.sol
chains/evm_core/contracts/forge-std/: StdCheats.sol  StdStorage.sol  Test.sol  console2.sol
chains/evm_core/src/: balance_change.rs  block.rs  db.rs  deal.rs  helper_contract.rs  lib.rs  poc_compiler.rs  preflight.rs  state_diff.rs  utils.rs
cli/: Cargo.toml
cli/src/: main.rs  proof.rs  snark.rs  tools.rs  verify.rs
cli/src/chains/: evm.rs  mod.rs
contracts/: .gitignore  foundry.toml
guest/: Cargo.toml
guest/src/: lib.rs
guests/: Cargo.toml  build.rs
guests/evm/: Cargo.toml
guests/evm/src/: main.rs
guests/exploit/: Cargo.toml
guests/exploit/src/: main.rs
guests/src/: lib.rs
src/: main.rs
src/chains/: evm.rs
wasm/: Cargo.toml  Justfile  README.md  patch.py
wasm/emulator/: index.js  package.json
wasm/patch/rand_core/: Cargo.toml
wasm/patch/rand_core/src/: error.rs  lib.rs  os.rs
wasm/src/: deserializer.rs  lib.rs
zk-methods/: Cargo.toml  build.rs
zk-methods/guest/: Cargo.toml
zk-methods/src/: lib.rs
