[workspace]
resolver = "2"
members = [
    "chains/evm",
    "cli",
    "bridge",
    "zk-methods",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
homepage = "https://0xhacked.com/"
repository = "https://github.com/0xHackedLabs/zkProver"

[workspace.dependencies]
risc0-build = { version = "0.21" }
risc0-zkvm = { version = "0.21", default-features = false }

[profile.release]
# Optimize for binary size, but keep loop vectorization
opt-level = "s"
# Performance optimizations
lto = "fat"
debug = 0
strip = true
panic = "abort"
codegen-units = 1