[workspace]
resolver = "2"
members = [
    "chains/evm_core",
    "cli",
    "bridge",
    "guests",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
homepage = "https://Secur.Fi/"
repository = "https://github.com/SecurFi/zkProver"

[workspace.dependencies]
risc0-build = { version = "0.21" }
risc0-zkvm = { version = "0.21", default-features = false }

[profile.release]
# Optimize for binary size, but keep loop vectorization
opt-level = "s"
# Performance optimizations
lto = "fat"
debug = 0
strip = true
panic = "abort"
codegen-units = 1