[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = { version = "3.3.0", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.163"}
hashbrown = { version = "0.13.2", features = ["serde"] }
