[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = { version = "3.5", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.163"}
alloy-primitives = { version = "0.4", default-features = false, features = ["rlp", "serde", "std"] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
rlp = "0.5.2"
sha2 = { version = "0.10.6", default-features = false }
sha3 = "0.10"
thiserror = "1.0"


[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"