[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = { version = "8", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.163"}
alloy-primitives = { version = "0.7.1", default-features = false, features = ["rlp", "serde"] }
