[package]
name = "zkProver"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
chains-evm = { path = "../chains/evm" }
ethers-core = {version = "2.0"}
ethers-providers = { version = "2.0"}

bridge = {path = "../bridge"}

serde = { version = "1.0.163" }
serde_json = "1.0.96"
bincode = "1.3.3"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
clap = { version = "=4.3.12", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
eyre = "0.6.8"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread"] }
risc0-zkvm = { version = "0.19.1", features = ["prove"]}
zk-guests = {path = "../guests", optional = true}
tempfile = "3.5.0"
hex = "0.4.3"
dirs-next = "2"
bonsai-sdk = { version = "0.5.1" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["prover"]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
prover = ["zk-guests"]
