[package]
name = "zkProver"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
chains-evm = { path = "../chains/evm" }
bridge = {path = "../bridge"}
clap = { version = "=4.3.12", features = ["derive"] }
ethers-core = { version = "2.0.7", default-features = false }
ethers-solc = { version = "2.0.7", default-features = false }
eyre = "0.6.8"
anyhow = "1.0"
env_logger = "0.10.0"
serde = { version = "1.0.163" }
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread"] }
risc0-zkvm = { workspace = true, features = ["prove"] }
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
zk-methods = {path = "../zk-methods", optional = true}
tempfile = "3.5.0"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0.96"
clio = { version = "0.2.7", features = ["clap-parse"] }
dirs-next = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["prover"]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
prover = ["zk-methods"]
