[package]
name = "zkProver"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
chains-evm-core = { path = "../chains/evm_core" }
bridge = {path = "../bridge"}
guests = { path = "../guests" }
clap = { version = "=4.3.12", features = ["derive"] }
anyhow = "1.0"
revm-primitives = { version = "3", default-features = false }
alloy-primitives = { version = "0.7.1", default-features = false, features = ["rlp", "serde"] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "8808d21", default-features = false , features=["reqwest"] }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "8808d21", default-features = false }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "8808d21"}

env_logger = "0.10.0"
serde = { version = "1.0.163" }
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread"] }
risc0-zkvm = { workspace = true, features = ["prove"] }
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
tempfile = "3.5.0"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0.96"
clio = { version = "0.2.7", features = ["clap-parse"] }
dirs-next = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
