[package]
name = "zkwasm-prover"
edition = "2021"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
getrandom = { version = "0.2", features = ["js"] }
bridge = {path = "../bridge"}
#serde = { version = "1.0.193", default-features = false }
#bytemuck = "1.14.0"
