[package]
name = "chains-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
ethers = {version = "2.0.7", features=["ethers-solc"]}
eyre = "0.6.8"
futures = "0.3.28"
hashbrown = { version = "0.13.2", features = ["serde"] }
hex = "0.4.3"
itertools = "0.10.5"
once_cell = "1.17.1"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
revm = { version = "3.3.0", default-features = false, features = ["serde", "std"] }
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros"] }
tracing = "0.1.37"
url = "2.3.1"

[build-dependencies]
ethers-solc = { version = "2.0.7", features = ["svm-solc"] }