[package]
name = "methods-guest"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
bridge = { path = "../../bridge",  default-features = false}
risc0-zkvm = { version="0.17.0", default-features = false, features = [ "std" ] }

[patch.crates-io]
radium = { git = 'https://github.com/ferrilab/radium.git', rev = "723bed5" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }